Fixed resolving Windows paths
- Path.of expects a path using slash as a separator, so old windows paths are
  invalid for this. We always have to use File first.

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>